// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Show active chats count  disabled btn 1`] = `
<div>
   
  <button
    class="button positive chat_btn"
  >
    <span
      class=""
    >
      Чаты | Активных: 1
    </span>
  </button>
</div>
`;

exports[`Show active chats count  with count 1`] = `
<div>
   
  <a
    class="link   "
    href="http://localhost/#/chats?user_id=123"
    rel="noopener"
    target="_blank"
  >
    <button
      class="button positive chat_btn"
    >
      <span
        class=""
      >
        Чаты | Активных: 1
      </span>
    </button>
  </a>
</div>
`;

exports[`Show active chats count  without count 1`] = `
<div>
   
  <a
    class="link   "
    href="http://localhost/#/chats?user_id=123"
    rel="noopener"
    target="_blank"
  >
    <button
      class="button positive chat_btn"
    >
      <span
        class=""
      >
        Чаты 
      </span>
    </button>
  </a>
</div>
`;
